# xnote

./: .gitignore  BUILD_REPORT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build-release.sh  config.json  index.html  package-lock.json  package.json  tauri.conf.json  test-markdown.html  test-marked.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
scripts/: build.bat  build.sh  dev.bat  dev.sh  sync-version.js
src/: App.vue  config.rs  database.rs  main.rs  main.ts  models.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  logger.rs  main.rs  models.rs
src-tauri/src/config/: mod.rs  tests.rs
src-tauri/src/database/: mod.rs
src-tauri/src/notes/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/tags/: mod.rs
src/commands/: attachments.rs  config.rs  export.rs  mod.rs  notes.rs  tags.rs
src/components/: ActionBar.vue  AttachmentManager.vue  ContentPane.vue  EditPane.vue  EditorArea.vue  Icons.vue  ImageManager.vue  LoggerExample.ts  MarkdownEditor.vue  MarkdownPreview.vue  NoteList.vue  NotePane.vue  SettingsPane.vue  SetupPage.vue  Sidebar.vue  SyncDialog.vue  TagManager.vue  TagPane.vue  ViewPane.vue
src/router/: index.ts
src/stores/: app.ts  editor.ts  notes.ts  tags.ts
src/styles/: main.scss  variables.scss
src/types/: index.ts
src/utils/: api.ts  logger.test.ts  logger.ts  markdown.ts
src/views/: FirstRunSetup.vue  MainLayout.vue
