[package]
name = "mdnote"
version = "0.1.0"
description = "A lightweight cross-platform Markdown note-taking application"
authors = ["MDNote Team"]
license = "MIT"
repository = "https://github.com/mdnote/mdnote"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
pulldown-cmark = "0.9"
base64 = "0.21"
image = "0.24"
walkdir = "2.4"
regex = "1.10"
yaml-rust = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]