[package]
name = "xnote"
version = "0.1.0"
description = "A lightweight markdown note-taking application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = [ "window-maximize", "window-set-always-on-top", "window-show", "window-unminimize", "window-unmaximize", "window-set-icon", "window-close", "window-minimize", "window-set-skip-taskbar", "window-set-size", "window-set-min-size", "window-set-fullscreen", "window-set-focus", "window-hide", "window-set-decorations", "window-set-resizable", "window-start-dragging", "window-set-position", "window-set-title", "window-set-max-size", "protocol-asset", "fs-all", "shell-open", "path-all", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
regex = "1.0"
mime_guess = "2.0"
git2 = "0.18"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
